# Transplanter

./: AGENT.md  Cargo.toml  README.md
converters/lisp_to_python/: Cargo.toml
converters/lisp_to_python/examples/: basic.scm  crop_columns.scm
converters/lisp_to_python/src/: codegen.rs  error.rs  ir.rs  lexer.rs  lib.rs  parser.rs
converters/lisp_to_python/tests/: transpile.rs
converters/rust_to_python/: Cargo.toml
converters/rust_to_python/examples/: basic.rs  crop_columns.rs
converters/rust_to_python/src/: codegen.rs  ir.rs  lexer.rs  lib.rs  parser.rs  prelude.rs
converters/rust_to_python/tests/: transpile.rs
docs/: technical-reference.md
examples/: basic.farmrs  crop_columns.farmrs  crop_columns.rs
src/: api_map.rs  cli.rs  codegen.rs  error.rs  ide_support.rs  ir.rs  language.rs  lexer.rs  lib.rs  lisp_check.rs  main.rs  parser.rs  paths.rs  prelude.rs  project.rs  rust_check.rs  rust_modules.rs  transplanter.rs  updater.rs  win_gui.rs  workspace_setup.rs
src/converters/: mod.rs
src/converters/rust_to_python/: codegen.rs  error.rs  mod.rs  strict.rs
tests/: cli.rs  transpile.rs
