[package]
name = "transplanter"
version = "0.1.3"
edition = "2024"
autoexamples = false

[workspace]
members = [".", "converters/rust_to_python", "converters/lisp_to_python"]
resolver = "3"

[dependencies]
transplanter_lisp = { path = "converters/lisp_to_python" }
transplanter_rust = { path = "converters/rust_to_python" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
